--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -412,18 +412,28 @@ html {
   height: 560px;
 }
 
+.video {
+  height: fit-content;
+}
+
 .video-player {
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 705px;
-  background-image: url("assets/img/video__temp-player.jpg");
   background-repeat: no-repeat;
   background-position: center 0;
 }
 
+.video-player__viewer {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  cursor: pointer;
+}
+
 .video-player__button {
+  position: absolute;
   width: 130px;
   height: 130px;
   background: url("assets/svg/video-player__button.svg");
@@ -433,10 +443,63 @@ html {
   transition: 0.3s;
 }
 
+.video-player__control-panel {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  width: 100%;
+  height: 50px;
+  background-color: transparent;
+}
+
+.control-button {
+  width: 25px;
+  height: 25px;
+  margin: 8px 20px;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: none;
+}
+
+.control-button:hover {
+  cursor: pointer;
+  filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
+    contrast(87%);
+  transition: 0.3s;
+}
+
+.control-panel__play {
+  background-image: url("./assets/svg/video-player__play-button.svg");
+  filter: brightness(0) saturate(100%) invert(99%) sepia(0%) saturate(0%)
+    hue-rotate(296deg) brightness(110%) contrast(101%);
+}
+
+.control-panel__fullscreen {
+  background-image: url("./assets/svg/video-player__fullscreen.svg");
+}
+
 .video-player__button:hover {
   cursor: pointer;
   filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
     contrast(87%);
+}
+
+.control-panel__progress-bar {
+  width: 80%;
+  height: 10px;
+  background-color: var(--color-white);
+  border-radius: 10px;
+}
+
+.progress-bar__fill {
+  width: 0%;
+  height: 100%;
+  background-color: var(--color-gold);
+  border-radius: 10px;
 }
 
 .price-list {
@@ -796,11 +859,6 @@ html {
     padding: 0;
   }
 
-  .video-player {
-    height: 418px;
-    background-size: cover;
-  }
-
   .video-player__button {
     width: 75px;
     height: 75px;
@@ -871,6 +929,20 @@ html {
 @media (max-width: 640px) {
   .header__navigation {
     width: 100%;
+  }
+
+  .video-player__control-panel {
+    height: 30px;
+  }
+
+  .control-button {
+    width: 10px;
+    height: 10px;
+    margin: 2px 10px;
+  }
+
+  .control-panel__progress-bar {
+    height: 6px;
   }
 }
 
