--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -421,6 +421,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow-y: hidden;
   background-repeat: no-repeat;
   background-position: center 0;
 }
@@ -428,7 +429,7 @@ html {
 .video-player__viewer {
   width: 100%;
   height: 100%;
-  object-fit: fill;
+  object-fit: contain;
   cursor: pointer;
 }
 
@@ -453,6 +454,7 @@ html {
   width: 100%;
   height: 50px;
   background-color: transparent;
+  transition: 0.5s;
 }
 
 .control-button {
