--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -544,6 +544,7 @@ html {
 .control-panel__progress-bar {
   width: 80%;
   height: 10px;
+  margin-right: 8px;
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 10px;
 }
@@ -1012,10 +1013,21 @@ html {
   .control-button {
     width: 10px;
     height: 10px;
-    margin: 2px 10px;
+    margin: 2px 5px;
   }
 
-  .control-panel__progress-bar {
+  .control-panel__progress-bar,
+  .control-panel__volume-range {
+    height: 6px;
+  }
+
+  .control-panel__volume-range {
+    width: 90px;
+  }
+
+  .control-panel__volume-range::-webkit-slider-thumb,
+  .fill__thumb {
+    width: 6px;
     height: 6px;
   }
 }
@@ -1077,7 +1089,7 @@ html {
 
   .video {
     position: relative;
-    height: 470px;
+    height: 400px;
     padding: var(--pad);
   }
 
@@ -1085,7 +1097,6 @@ html {
     position: absolute;
     left: 0;
     width: 100%;
-    height: 300px;
   }
 
   .price-item {
