--- a/audio-player/style.css
+++ b/audio-player/style.css
@@ -28,9 +28,78 @@
 .preload {
   position: fixed;
   z-index: 199;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
   background-color: var(--color-black);
+}
+
+.preload__loading {
+  display: block;
+  width: 10px;
+  height: 5px;
+  margin-right: 10px;
+  background-color: var(--color-white);
+  border-radius: 2px;
+}
+
+.preload__loading:nth-child(1),
+.preload__loading:nth-child(5) {
+  animation: loading-1 1s 0s infinite;
+}
+
+.preload__loading:nth-child(2),
+.preload__loading:nth-child(4) {
+  animation: loading-2 1s 0.1s infinite;
+}
+
+.preload__loading:nth-child(3) {
+  animation: loading-3 1s 0.2s infinite;
+}
+
+@keyframes loading-1 {
+  0% {
+    height: 5px;
+  }
+
+  50% {
+    height: 25px;
+  }
+
+  100% {
+    height: 5px;
+  }
+}
+
+@keyframes loading-2 {
+  0% {
+    height: 10px;
+  }
+
+  50% {
+    height: 50px;
+  }
+
+  100% {
+    height: 10px;
+  }
+}
+
+@keyframes loading-3 {
+  0% {
+    height: 20px;
+  }
+
+  50% {
+    height: 60px;
+  }
+
+  100% {
+    height: 20px;
+  }
 }
 
 .list {
